Added pet addition functionality and updated schema of pet table

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -47,6 +47,7 @@
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                 <a class="nav-item nav-link" id="home" href="/">Home</a>
                 <a class="nav-item nav-link" id="dashboard" href="/dashboard">Dashboard</a>
+                <a class="nav-item nav-link" id="add" href="/add">Add Pet</a>
             </div>
 
         </div>
