--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -48,6 +48,7 @@
                 <a class="nav-item nav-link" id="home" href="/">Home</a>
                 <a class="nav-item nav-link" id="dashboard" href="/dashboard">Dashboard</a>
                 <a class="nav-item nav-link" id="add" href="/add">Add Pet</a>
+                <a class="nav-item nav-link" id="foster" href="/foster">Fostering</a>
             </div>
 
         </div>
