--- a/website/templates/add.html
+++ b/website/templates/add.html
@@ -69,9 +69,9 @@
             <div class="form-group">
                 <label for="sex">Sex</label>
                 <select class="form-control" id="sex" name="sex" required>
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                    <option value="unknown">Unknown</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Unknown">Unknown</option>
                 </select>
             </div>
             <div class="form-group">
