--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,6 +3,15 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+<style>
+    .card-img-top {
+    width: 100%; 
+    height: 200px;
+    object-fit: cover; 
+}
+
+
+</style>
     <div class="container mt-4">
         <h1 class="mb-4">Home</h1>
         <p>Welcome to the home page!</p>
