--- a/patpatpat-lost/patpatpat-search_filter_add_pet/website/templates/dashboard.html
+++ b/patpatpat-lost/patpatpat-search_filter_add_pet/website/templates/dashboard.html
@@ -52,9 +52,24 @@
                         <div class="row">
                             {% for pet in pets %}
                                 <div class="col-md-4 mb-4">
+                                    {% if pet[5] == 'lost' or pet[5] == 'found' %}
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">{{ pet[1] }}</h5>
+                                        <p class="card-text">Age: {{ pet[2] }}</p>
+                                        <p class="card-text">Breed: {{ pet[4] }}</p>
+                                        <p class="card-text">Description: {{ pet[7] }}</p>
+                                        <form action="/edit" method="post">
+                                            <input type="hidden" name="pet_id" value="{{ pet[0] }}">
+                                            <button type="submit" class="btn btn-primary" style="display: block; margin-top: 10px; width: 100%;">Edit</button>
+                                        </form>
+                                    </div>
+                                    {% else %}      
                                     <div class="card">
+
                                         <img src="{{ pet[11] }}" class="card-img-top" alt="{{ pet[1] }}">
                                         <div class="card-body">
+
                                             <h5 class="card-title">{{ pet[1] }}</h5>
                                             <p class="card-text">Age: {{ pet[6] }}</p>
                                             <p class="card-text">Breed: {{ pet[5] }}</p>
@@ -65,6 +80,7 @@
                                             </form>
                                         </div>
                                     </div>
+                                    {% endif %}
                                 </div>
                             {% endfor %}
                         </div>
