--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -16,8 +16,11 @@
         <div class="form-group">
             <label for="email">Email Address</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
-            <label for="firstName">First Name</label>
-            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter first name">
+            <label for="firstName">User Name</label>
+            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your name">
+            <label for="socials">Socials</label>
+            <input type="text" class="form-control" id="socials" name="fb" placeholder="facebook account link">
+            <input type="text" class="form-control" id="socials" name="whatsapp" placeholder="whatsapp number">
             <label for="password1">Password</label>
             <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password">
             <label for="password2">Confirm Password</label>
