--- a/website/templates/adopt.html
+++ b/website/templates/adopt.html
@@ -94,8 +94,8 @@
                     <p><strong>Name:</strong> {{ owner[2] }}</p>
                     <p><strong>Contact:</strong> {{ owner[4] }}</p>
                     <div class="social-links">
-                        <a href="{{ owner.facebook }}" target="_blank"><i class="fab fa-facebook"></i></a>
-                        <a href="https://wa.me/{{ owner.whatsapp }}" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a href="{{ owner[5] }}" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://wa.me/{{ owner[6] }}" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
